--- a/index.html
+++ b/index.html
@@ -2,74 +2,20 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Assingment 1</title>
+    <title>Demo</title>
 </head>
 <body>
     <h1>
-        Shane Costello
+        Hello World!
     </h1>
 
-    <h2>
-        Net ID: <a href="https://github.com/ShaneCost/ShaneCost.github.io">v87j276</a>
-    </h2>
+    <p>
+        Here is a paragraph.
+    </p>
 
-    <h2>
-        Class Schedule
-    </h2>
-
-    <table>
-        <tr>
-               <td></td>     <th>Monday</th> <th>Tuesday</th> <th>Wednesday</th> <th>Thursday</th> <th>Friday</th>
-        </tr>
-            
-        <tr>
-            <td> 9:00 </td> <td>BIOB 105</td>  <td> </td>      <td>BIOB 105</td>     <td> </td>    <td>BIOB 105</td>
-        </tr>
-
-        <tr>
-            <td> 10:00 </td> <td></td> <td></td> <td></td> <td></td> <td></td>
-        </tr>
-
-        <tr>
-            <td> 11:00 </td> <td>ACTG 202</td>  <td> </td>     <td>ACTG 202</td>     <td> </td>     <td>ACTG 202</td>
-        </tr>
-
-        <tr>
-            <td> 12:00 </td>    <td> </td> <td>ESOF 232</td>      <td> </td>       <td>ESOF 232</td> <td></td>
-        </tr>
-
-        <tr>
-            <td> 13:00 </td> <td>CSCI 366</td>  <td> </td>     <td>CSCI 366</td>      <td> </td>    <td>CSCI 366</td>
-        </tr>
-
-        <tr>
-            <td> 14:00 </td> <td></td> <td></td> <td></td> <td></td> <td></td>
-        </tr>
-
-        <tr>
-            <td> 15:00 </td> <td></td> <td></td> <td></td> <td></td> <td></td> 
-        </tr>
-
-        <tr>
-            <td> 16:00 </td> <td>CSCI 331</td>  <td> </td>     <td>CSCI 331</td>     <td> </td>      <td>CSCI 331</td>
-        </tr>
-
-        <tr>
-            <td> 17:00 </td> <td></td> <td></td> <td></td> <td></td> <td></td>
-        </tr>
-    </table>
-
-    <h2>
-        Previous Courses
-    </h2>
-
-    <ul>
-        <li>CSCI 232</li>
-        <li>CSCI 246</li>
-        <li>CSCI 215</li>
-        <li>CSCI 132</li>
-        <li>CSCI 127</li>
-    </ul>
-
+    <p>
+        And another.
+    </p>
+    
 </body>
 </html>
